# ahp_graph

./: .gitignore  .mypy.ini  BuildSST.py  DataSheet.py  Device.py  DeviceGraph.py  Dockerfile  Geometry.py  LICENSE.md  Makefile  README.md  SSTGraph.py  __init__.py  fake_sst.py  mypy.sh  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  requirements.txt
Docker/: Dockerfile_AHP  Dockerfile_AHP_noTyping  Dockerfile_SST_12  Dockerfile_SST_12_noTyping  Makefile
ahp_graph/: DeviceGraph.py  SSTGraph.py
container/: Dockerfile  Makefile
examples/: .gitignore  README.md
examples/HPC/: .gitignore  Devices.py  HPC.py  Makefile  README.md  datasheet.json  processor.py  server.py
examples/pingpong/: Makefile  Ping.cpp  Ping.hpp  Pong.cpp  Pong.hpp  README.md  architecture.py  pingpong.py
examples/pingpong/python/: Makefile  README.md  architecture.py  pingpong.py
examples/pingpong/sst/: Makefile  Ping.cpp  README.md  architecture.py  pingpong.py
examples/pingpongSST/: Pong.cpp  pingpong.py
examples/regional_planning/: Makefile  README.md  assemblies_and_components.py  component_city.cpp  component_city.hpp  component_house.cpp  component_house.hpp  component_neighborhood.cpp  component_neighborhood.hpp  create_graph.py  flat_sst_graph_of_houses.py
examples/two_assemblies/: two_assemblies.py
src/ahp_graph/: Device.py  DeviceGraph.py  SSTGraph.py
tests/: Devices.py  scalability.py  scale.sh  test_Device.py  test_DeviceGraph.py
unittest/: Device.py  DeviceGraph.py  Devices.py  SSTGraph.py  run.sh  test.py  test_Device.py  test_DeviceGraph.py
