[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahp_graph"
version = "2.0.2"
authors = [{ name="lpsmodsim", email="modsim@lps.umd.edu" }]
description = "Attributed Hierarchical Port Graph"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pygraphviz",
    "orjson",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lpsmodsim/ahp_graph"
