[metadata]
name = ahp_graph
version = 0.0.1
author = lpsmodsim
author_email = modsim@lps.umd.edu
description = Attributed Hierarchical Port Graph
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpsmodsim/ahp_graph
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.extras_require]
tests =
    pytest
    flake8
    mypy
